ingress/kubeapps/consul/consul-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /   #new 
  name: consul
  namespace: consul
spec:
#   tls:
#   - hosts:
#     - lope.test
#     secretName: lope-tls-secret
  rules:
  - host: consul.lope.test
    http:
      paths:
      - path: /
        backend:
          serviceName: consul-ui
          servicePort: 80
